Bug 53130 - 99c65ba breaks rendering (flickery, eventual fail)
Summary: 99c65ba breaks rendering (flickery, eventual fail)
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/r600 (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-08-04 21:05 UTC by Darren Salt
Modified: 2013-02-01 16:05 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Darren Salt 2012-08-04 21:05:38 UTC
I noticed broken rendering in mesa git fairly recently.

In Unvanquished (current release), the effect with its GL3 renderer is that the display becomes more and more flickery, and eventually rendering apparently ceases; the game remains otherwise responsive. Its GL ('vanilla' renderer, much as in Tremulous) is unaffected.

Bisection points at the following commit; I've confirmed locally that git master with this reverted does not exhibit the broken behaviour.

commit 99c65bac341f808279a8a847158ace4f058aa72e
Author: Marek Olšák <maraeo@gmail.com>
Date:   Sun Feb 26 20:37:43 2012 +0100

    r600g: implement wait-free buffer transfer for DISCARD_RANGE
    
    Reviewed-by: Alex Deucher <alexander.deucher@amd.com>
    Reviewed-by: Christian König <christian.koenig@amd.com>
Comment 1 Darren Salt 2012-08-04 21:09:24 UTC
Linux 3.5; HD6770.

01:00.0 VGA compatible controller [0300]: Advanced Micro Devices [AMD] nee ATI Juniper XT [AMD Radeon HD 6000 Series] [1002:68ba]
Comment 2 Marek Olšák 2012-08-15 17:30:17 UTC
The problematic code has been disabled in Mesa master. Closing.
Comment 3 Darren Salt 2012-11-05 22:36:07 UTC
I've rebuilt mesa with this re-enabled and I saw a lot of rendering glitches. I suspect that DISCARD_RANGE being re-enabled is the problem, although I've also built and installed an updated xf86-video-ati (cdf522f→20bfc65).

My current mesa build has 1eedebc reverted; I'll re-check with that undone later.
Comment 4 Andreas Boll 2013-02-01 16:05:00 UTC
(In reply to comment #3)
> I've rebuilt mesa with this re-enabled and I saw a lot of rendering
> glitches. I suspect that DISCARD_RANGE being re-enabled is the problem,
> although I've also built and installed an updated xf86-video-ati
> (cdf522f→20bfc65).
> 
> My current mesa build has 1eedebc reverted; I'll re-check with that undone
> later.

Do you still have the rendering glitches with enabled DISCARD_RANGE?
If so please reopen this bug.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.